# tilt-testing-results-dashboard

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Home.py  main.py  pyproject.toml
pages/: 10_Data_Over_Time.py  1_Test_Info.py  20_Accuracy.py  30_Repeatability.py  3_Raw_Data.py  40_Linearity.py
results_dashboard/: app.py  cache_manager.py  common_components.py  test_selection.py
results_dashboard/data/: __init__.py  angle_data.py  mongo.py  repeatability_data.py  sensor_names.py  utils.py
results_dashboard/data/mongo/: __init__.py  tests_db.py
results_dashboard/data/mongo_old/: __init__.py  samples_db.py  tests_db.py
results_dashboard/pages/: config.py  home.py
results_dashboard/pages/data/: angle_data.py
results_dashboard/pages/over_time/: angle.py
results_dashboard/pages/repeatability/: sensor.py
results_dashboard/sidebar/: __init__.py  samples.py  test_select.py
results_dashboard/ui/: samples.py
results_dashboard/views/: config.py  data.py
results_dashboard/views/over_time/: __init__.py  angle.py
tilt_testing_results_dashboard/: app.py
tilt_testing_results_dashboard/calculations/: prepare_samples_df.py
tilt_testing_results_dashboard/data/: __init__.py
tilt_testing_results_dashboard/data/mongo/: tests_db.py
tilt_testing_results_dashboard/graphs/accuracy/: __init__.py  by_sensor.py
tilt_testing_results_dashboard/graphs/linearity/: __init__.py
tilt_testing_results_dashboard/graphs/linearity/linear_range/: __init__.py  by_sensor.py
tilt_testing_results_dashboard/graphs/over_time/: __init__.py  stage_angle.py  temperature.py
tilt_testing_results_dashboard/graphs/repeatability/: __init__.py  by_sensor.py  by_series.py
tilt_testing_results_dashboard/ui/: samples.py  test_select.py
