[tool.poetry]
name = "results-dashboard"
version = "0.1.0"
description = ""
authors = ["Max Wyerman <mwyerman@frederickscompany.com>"]
readme = "README.md"
packages = [{include = "results_dashboard"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = {extras = ["srv"], version = "^4.2.0"}
pandas = "^1.5.0"
streamlit = "^1.13.0"
altair = "^4.2.0"
scipy = "^1.9.2"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
