[tool.poetry]
name = "results-dashboard"
version = "0.1.0"
description = ""
authors = ["Max Wyerman <mwyerman@frederickscompany.com>"]
readme = "README.md"
packages = [{include = "results_dashboard"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"
streamlit = "^1.13.0"
altair = "^4.2.0"
pymongo = "^4.3.3"
scikit-learn = "^1.1.3"
streamlit-extras = "^0.2.4"
dash = "^2.10.2"
dash-bootstrap-components = "^1.4.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
