[tool.poetry]
name = "results-dashboard"
version = "0.1.0"
description = ""
authors = ["Max Wyerman <mwyerman@frederickscompany.com>"]
readme = "README.md"
packages = [{include = "results_dashboard"}]

[tool.poetry.scripts]
results-dashboard-container = "results_dashboard.app:docker_run"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"
pymongo = "^4.3.3"
dash = {extras = ["diskcache"], version = "^2.11.1"}
dash-bootstrap-components = "^1.4.1"
celery = "^5.3.1"
diskcache = "^5.6.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
